force-app/main/default/objects/Org_Unit_User_Link__c/Org_Unit_User_Link__c.object-meta.xml
<CustomObject>
    <description>Link between the Org Unit and User objects.</description>
    <label>Org Unit User Link</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Unit User Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>