force-app/main/default/objects/Org_Unit_User_Link__c/fields/DSA_FSS__c.field-meta.xml
<CustomField>
    <fullName>DSA_FSS__c</fullName>
    <formula>User__r.DSA_FSS__r.FirstName + &quot; &quot; + User__r.DSA_FSS__r.LastName</formula>
    <inlineHelpText>The name of the user&apos;s DSA</inlineHelpText>
    <label>DSA/FSS</label>
    <type>Text</type>
</CustomField>