force-app/main/default/objects/Org_Unit_User_Link__c/fields/Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>Org_Unit__c</fullName>
    <label>Org Unit</label>
    <referenceTo>Org_Unit__c</referenceTo>
    <relationshipLabel>Org Unit User Links</relationshipLabel>
    <relationshipName>Org_Unit_User_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>