force-app/main/default/objects/Org_Unit_User_Link__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Org_Unit_User_Links</relationshipName>
    <type>Lookup</type>
</CustomField>